For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Enhancements::

* add support for `text-transform` property on first line of abstract in theme (#2141)
* rename `resolve_alignment_from_role` to `resolve_text_align_from_role` to reflect proper terminology and purpose; alias old method name

Bug Fixes::

* allow theme to set font style of first line of abstract to `normal_italic` (#2138)
* add support for `:color` option to `Prawn::Text::Formatted::Box` directly and remove workarounds
* preserve columns on subsequent pages in the index section (#2149)
* fix return value of `cursor` method inside block for column box

== 2.0.0.beta.1 (2022-05-04) - @mojavelinux

Enhancements::

* introduce `index-pagenum-sequence-style` document attribute to control style of sequential page numbers in index when media=screen (#1656)
* allow entry for document in outline to be controlled using `outline-title` attribute (#1789)
* allow extended converter to insert or filter toc entries by overriding `get_entries_for_toc` method (#2097)
* add `asciidoctor/pdf/nopngmagick` script to unregister Gmagick handler for PNG images only (#1687)
* allow theme to configure which end the caption is placed for a block image (#2115)
* add `Page#imported` method to mark page as imported (which suppresses running content)
* add support for `smallcaps` text transform by replacing lowercase letters with small capital variants (#1192)
* use `base-border-color` as default border color; control appearance of border using `border-width` value alone (#2134)
* remove border colors in base theme so all border colors can be controlled using `base-border-color` when extending theme
* enable running footer when using base theme

Bug Fixes::

* allow border width of block image to be specified as an array (1, 2, or 4 values) (#2119)